# antigravity-agent

./: .markdownlint.json  CHANGELOG.md  README.md  REGRESSION-TEST-REPORT.md  TASK-6.5-VERIFICATION.md  TASK-9-VERIFICATION.md  TEST-SUMMARY.md  docs-quality-report.json  package-lock.json  package.json
.github/workflows/: ci.yml  docs-test.yml  release.yml
.kiro/specs/comprehensive-documentation/: design.md  requirements.md  tasks.md
.kiro/specs/security-audit/: design.md  requirements.md  tasks.md
docs/: BUG_REPORT.md  QUALITY-CHECK-GUIDE.md  QUALITY-CHECK-SUMMARY.md  README.md  TESTING.md
docs/zh-CN/: GLOSSARY.md  _template.md
scripts/: README.md  check-docs-quality.js  test-api-coverage.js  test-docs-existence.js  test-docs-links.js  test-docs-sections.js
src/: AppUserPanel.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_settings.rs  main.rs  path_utils.rs  setup.rs  state.rs
src-tauri/src/antigravity/: backup.rs  path_config.rs  restore.rs
src-tauri/src/commands/: account_commands.rs  backup_commands.rs  logging_commands.rs  mod.rs  process_commands.rs  settings_commands.rs  tray_commands.rs
src-tauri/src/language_server/: cache.rs  commands.rs  linux.rs  macos.rs  mod.rs  types.rs  utils.rs  windows.rs
src-tauri/src/platform/: process.rs
src-tauri/src/system_tray/: events.rs  manager.rs
src-tauri/src/utils/: crypto.rs  log_sanitizer.rs  mod.rs
src-tauri/src/window/: event_handler.rs
src/commands/: DbCommands.ts  LanguageServerCommands.ts
src/modules/: use-language-server-user-info.ts
src/utils/: protobuf-parser.ts
(+21 files in other folders)
