[package]
name = "antigravity-agent"
version = "1.0.3"
description = "Antigravity Agent - Account management tool"
authors = ["Kiki"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2.3"
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-http = "2.0"

# Tracing 生态系统
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
tracing-attributes = "0.1"

base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
zip = "2.2"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1.10"
sysinfo = "0.30"
walkdir = "2.5"
tauri-plugin-os = "2"

# 安全加密
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
whoami = "1.5"

[target.'cfg(windows)'.dependencies]


